[package]
name = "crossword-tutorial-chapter-3"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>", "Mike Purvis <mike@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
bs58 = "0.4"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
bs58 = "0.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
